This is the only commit, since I had finished this application two months earlier.

--- a/src/conecta3/ui/victorycontrol/VictoryControl.css
+++ b/src/conecta3/ui/victorycontrol/VictoryControl.css
@@ -1,8 +1,9 @@
 #victory-control{
     text-align: center;
     border-top: 1px solid black;
-    color: rebeccapurple;
-    font-size:larger;
+    color:darkolivegreen;
+    font-size:x-large;
+    font-weight:bold;
     width: 50%;
     margin: 2em auto;
 }
